# cyl

./: .gitignore  CHANGELOG.md  CI_COST_OPTIMIZATION.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LANGUAGE_SPEC.md  LICENSE  Makefile  README.md  STDLIB.md  SYNTAX_FEATURES.md  config.cyl  cyl.code-workspace  debug-llvm-local.sh  jest.config.cjs  jest.config.js  jest.config.ts  minimal_pyo3_test.rs  package-lock.json  package.json  pnpm-lock.yaml  test-ast.ts  tsconfig.json  tsconfig.test.json  vercel.json
.changeset/: ci-tool-path-fix.md  clippy-format-args-fix.md  clippy-linting-completion.md  comprehensive-ci-llvm-improvements.md  coverage-and-doc-patch.md  esm-jest-test-fixes.md  formatting-fix-ci.md  python-plugin-initial.md  rust-formatting-fix.md  suppress-dead-code-warnings.md  windows-ci-llvm-fix.md  workflow-and-scripts-cleanup.md
.github/: debug-llvm.sh
adapters/: js.rs  mod.rs  python.rs
cli/: commands.rs  main.rs
compiler/: Cargo.toml  build.rs  tarpaulin.toml
compiler/src/: ast.rs  codegen.rs  cranelift_codegen.rs  error.rs  generated_ast.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  stdlib.rs
compiler/src/interpreter/: eval.rs  mod.rs  stdlib.rs  utils.rs  value.rs
compiler/src/parser/: expressions.rs  functions.rs  helpers.rs  mod.rs  patterns.rs  statements.rs
compiler/src/plugins/: language_plugin.rs  mod.rs
compiler/src/stdlib/: fs.rs  math.rs  mod.rs  net.rs  os.rs  string.rs
compiler/tests/: integration.rs  parser_new_features.rs
docs/: README.md
engine/: config.rs  events.rs  mod.rs  plugin_manager.rs  syntax.rs
examples/: arithmetic_test.cyl  array_test.cyl  fibonacci.cyl  hello_world  hello_world.cyl  param_infer.cyl  print_test.cyl  struct_test.cyl  syntax_error.cyl  web_request.cyl
plugins/: example_plugin.py  example_plugin.rs  language_plugin.rs  mod.rs
pyo3_minimal_test/: Cargo.toml
scripts/: build_cylc.sh  cleanup-empty-files.sh  debug-llvm-local.sh  diagnose_and_build_cylc.sh  local_ci_check.sh  setup_and_build_with_python312.sh  update-version.mjs  update-version.sh
tests/: README.md  integration.rs  integration_tests.rs
(+88 files in other folders)
