[package]
authors = ["clxrity"]
description = "Cyl programming language compiler"
edition = "2021"
license = "MIT"
name = "cylc"
rust-version = "1.75.0"
version = "4.0.0"

[[bin]]
name = "cylc"
path = "src/main.rs"

[lib]
name = "cylc"
path = "src/lib.rs"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}

# Lexer and Parser
chumsky = "0.9"
logos = "0.13"

# Code generation
inkwell = {version = "0.4", features = ["llvm14-0"], optional = true}

# Cranelift backend (alternative to LLVM)
cranelift-codegen = {version = "0.102", optional = true}
cranelift-frontend = {version = "0.102", optional = true}
cranelift-module = {version = "0.102", optional = true}
cranelift-native = {version = "0.102", optional = true}
cranelift-object = {version = "0.102", optional = true}

# File handling
path-absolutize = "3.1"
walkdir = "2.4"

# Standard library integration
libc = "0.2"

[features]
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-module", "cranelift-object", "cranelift-native"]
default = ["cranelift"]
llvm = ["inkwell"]

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = {workspace = true}
